<resources>
    <string name="app_name">100NTS</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">Password must be at least 8 characters (with at least one digit, lower and uppercase letter and special character)</string>
    <string name="wrong_password">Wrong password</string>
    <string name="login_failed">Login failed</string>
    <string name="view_all_sites">View all sites</string>
    <string name="all_sites">All sites</string>
    <string name="top_sites">Top-rated sites</string>
    <string name="favourite_sites">Favourite sites</string>
    <string name="sites_near_me">Sites near me</string>
    <string name="top_users">User ranking</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_password2">Re-enter password</string>
    <string name="action_register">Register</string>
    <string name="rank_participation">Participate in the rankings</string>
    <string name="reg_form">Registration form</string>
    <string name="invalid_name">Name must be at least 3 letters</string>
    <string name="invalid_surname">Surname must be at least 3 letters</string>
    <string name="nonmatching_passwords">Passwords do not match</string>
    <string name="sites">Tourist sites</string>
    <string name="site_tile">Site title</string>
    <string name="site_province_and_town">Site province and town</string>
    <string name="site_details">Site description</string>
    <string name="logout">Sign out</string>
    <string name="exit">Exit</string>
    <string name="error">An unexpected error has occurred:</string>
    <string name="undefined_error">Unfortunately we cannot provide more information.</string>
    <string name="not_enough_site_rankings">There are no rated sites at this time.</string>
    <string name="edit_form">Edit profile</string>
    <string name="action_save_changes">Save changes</string>
    <string name="edit_profile_info">Edit only the fields where you want to change the current user information.</string>
    <string name="prompt_edit_password">New password</string>
    <string name="prompt_confirm_new_password">Re-enter new password</string>
    <string name="prompt_new_name">New name</string>
    <string name="prompt_new_surname">New surname</string>
    <string name="prompt_new_email">New email</string>
    <string name="existing_email">A user with such an email already exists</string>
    <string name="updated_successfully">User information updated successfully</string>
    <string name="location_not_granted_title">Location not granted</string>
    <string name="location_not_granted">We can not access your device\'s location – some features may not work.</string>
    <string name="not_enough_user_rankings">There are currently no participating users or those with at least one site visited.</string>
    <string name="user_ranking">User ranking</string>
    <string name="my_sites">The sites I visited</string>
    <string name="visited_on">Visited on:</string>
    <string name="not_enough_user_visites">You have not visited any tourist sites so far.</string>
    <string name="voting_not_enabled">You must visit this site to rate it</string>
    <string name="saved_vote">The rating was successfully saved</string>
    <string name="saved_comment">The comment was successfully added</string>
    <string name="comments">Comments</string>
    <string name="not_comments">There are no comments yet.</string>
    <string name="view_comments">View comments</string>
    <string name="comment_here">Add your comment</string>
    <string name="add_comment">Post comment</string>
    <string name="invalid_comment">Comment can be between %1$d and %2$d characters</string>
    <string name="search_site">Search by name, province or town</string>
    <string name="no_search_results">There are no matching sites</string>
    <string name="google_maps_not_found">We couldn\'t find Google Maps on your phone</string>
    <string name="added_to_favourites_successfully">The site was successfully added to favourites</string>
    <string name="removed_from_favourites_successfully">The site was successfully removed from favourites</string>
    <string name="no_sites">There are no sites to display.</string>
    <string name="no_favourite_sites">You don\'t have any sites added to favorites yet.</string>
    <string name="no_near_to_me_sites">There are no sites in the selected distance.</string>
    <string name="select_distance">Select distance:</string>
    <string name="km">km</string>
    <string name="still_determining_location">We are still determining your location, please wait</string>
    <string name="add_site">Add site</string>
    <string name="edit_site">Edit site</string>
    <string name="change_user_role">Change user role</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="site_title">Site title</string>
    <string name="site_title_bg">Site title BG</string>
    <string name="site_province">Site province</string>
    <string name="site_province_bg">Site province BG</string>
    <string name="site_town">Site town</string>
    <string name="site_town_bg">Site town BG</string>
    <string name="site_description">Site description</string>
    <string name="site_description_bg">Site description BG</string>
    <string name="site_latitude">Site latitude</string>
    <string name="site_longitude">Site longitude</string>
    <string name="site_is_visible">Site is visible</string>
    <string name="site_image_link">Link to site image</string>
    <string name="invalid_character_count">The value must be between %1$d and %2$d characters</string>
    <string name="invalid_value_with_english_letters">The value must not contain English letters</string>
    <string name="invalid_value_with_cyrillic_letters">The value must not contain Cyrillic letters</string>
    <string name="invalid_number_value">The value must be a number</string>
    <string name="invalid_number_range">The value must be between %1$d and %2$d</string>
    <string name="invalid_image_url">The value is not valid image URL</string>
    <string name="successful_operation">Successful operation</string>
    <string name="no_changes_to_be_saved">There are no changes to be saved</string>
    <string name="change">Change</string>
    <string name="confirm">Confirm</string>
    <string name="security_code">Security code</string>
    <string name="security_code_info">Please enter the security code we sent to your email.</string>
    <string name="invalid_value">Invalid value</string>
    <string name="wrong_security_code">Wrong security code</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_info">We\'ve detected a few failed login attempts – you can set a new password for your account by entering the security code we sent to your email.</string>
</resources>