<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/regFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/reg_form"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/regName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/prompt_name"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/regSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regFormTitle" />

    <EditText
        android:id="@+id/regSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="@string/prompt_surname"
        android:hint="@string/prompt_surname"
        android:textColor="#000000"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/regEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regName" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#66000000"
        android:backgroundTint="#66000000"
        app:layout_constraintBottom_toTopOf="@+id/regPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regSurname" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="@string/prompt_password"
        android:textColor="#000000"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/regPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmail" />

    <EditText
        android:id="@+id/regPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/prompt_password2"
        android:ems="10"
        android:hint="@string/prompt_password2"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/rankSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    <Switch
        android:id="@+id/rankSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/rank_participation"
        android:checked="true"
        android:trackTint="#A4B8AD"
        app:layout_constraintBottom_toTopOf="@+id/regButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/action_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>